--- a/index.html
+++ b/index.html
@@ -772,8 +772,8 @@
     import { createClient } from "https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/+esm";
 
     // 🔧 PREENCHA COM OS SEUS DADOS DO SUPABASE
-    const SUPABASE_URL = "https://SEU_PROJETO.supabase.co";
-    const SUPABASE_ANON_KEY = "SUA_ANON_KEY_AQUI";
+    const SUPABASE_URL = "https://sgrtyotwnlwpwfecnoze.supabase.co";
+    const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InNncnR5b3R3bmx3cHdmZWNub3plIiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njc3NjgxMjcsImV4cCI6MjA4MzM0NDEyN30.QZvTN3mHUwqBwvXeL6q89qNW_4s1Cvopa40nt4TFa9w";
 
     // Bucket de fotos
     const BUCKET_NAME = "ninhos-fotos";
@@ -1596,3 +1596,4 @@
   </script>
 </body>
 </html>
+
