Botão Google ok.html
segundo teste no primeiro esqueci o anon

--- a/index.html
+++ b/index.html
@@ -643,8 +643,8 @@
 <script>
   /* ======================= CONFIG SUPABASE ======================= */
 
-  const SUPABASE_URL = "COLOQUE_AQUI_SUA_URL";
-  const SUPABASE_ANON_KEY = "COLOQUE_AQUI_SUA_CHAVE_ANON";
+  const SUPABASE_URL = "https://sgrtyotwnlwpwfecnoze.supabase.co";
+  const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InNncnR5b3R3bmx3cHdmZWNub3plIiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njc3NjgxMjcsImV4cCI6MjA4MzM0NDEyN30.QZvTN3mHUwqBwvXeL6q89qNW_4s1Cvopa40nt4TFa9w";
 
   const supabaseClient = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
@@ -1388,3 +1388,4 @@
 </script>
 </body>
 </html>
+
