--- a/index.html
+++ b/index.html
@@ -10,25 +10,167 @@
   <!-- PWA -->
   <link rel="manifest" href="manifest.webmanifest" />
 
-  <link rel="stylesheet" href="./css/app.css" />
-
   <!-- Leaflet -->
   <link
     rel="stylesheet"
     href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+    integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
     crossorigin=""
   />
   <script
     src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+    integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
     crossorigin=""
   ></script>
 
   <!-- Supabase -->
   <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
+
+  <!-- App CSS -->
+  <link rel="stylesheet" href="./css/main.css" />
 </head>
 <body>
-  <div id="app-root"></div>
 
-  <script type="module" src="./js/main.js"></script>
+<!-- ============ TELA DE AUTENTICAÇÃO ============ -->
+<div id="auth-screen">
+  <header class="auth-header">
+    <div class="brand-hero">
+      <div class="brand-logo" aria-hidden="true">🐝</div>
+      <div class="brand-name">SeeBee</div>
+    </div>
+  </header>
+
+  <div id="auth-card">
+    <h2>Entrar ou criar conta</h2>
+    <p>Use e-mail e senha ou conecte com Google.</p>
+
+    <div class="auth-field">
+      <label for="auth-email">E-mail</label>
+      <input id="auth-email" type="email" autocomplete="email" />
+    </div>
+
+    <div class="auth-field">
+      <label for="auth-password">Senha</label>
+      <input id="auth-password" type="password" autocomplete="current-password" />
+    </div>
+
+    <div class="auth-buttons">
+      <button class="btn-primary" id="btn-signin">Entrar</button>
+      <button class="btn-outline" id="btn-signup">Criar conta</button>
+    </div>
+
+    <button class="btn-google" id="btn-google">
+      <span class="btn-google-icon"></span>
+      <span>Entrar com Google</span>
+    </button>
+
+    <div id="auth-msg" class="auth-msg"></div>
+  </div>
+</div>
+
+<!-- ============ TELA DO APP ============ -->
+<div id="app-screen" class="hidden">
+  <header class="app-header">
+    <div class="title-block">
+      <h1>Rastreador de ninhos</h1>
+      <p class="subtle">Registre trajetos e marque ninhos.</p>
+    </div>
+
+    <div class="header-right">
+      <div class="status-pill" id="status-pill">
+        <span class="status-dot"></span>
+        <span id="cloud-status">Trabalhando online</span>
+      </div>
+
+      <div class="brand-mini">
+        <div class="brand-mini-logo" aria-hidden="true">🐝</div>
+        <div class="brand-mini-name">SeeBee</div>
+      </div>
+
+      <div class="user-info">
+        <span class="user-email" id="user-email-label"></span>
+        <button class="btn-ghost" id="btn-logout">Sair</button>
+      </div>
+    </div>
+  </header>
+
+  <div class="app-grid">
+    <section class="card">
+      <h3>Trajeto em andamento <span class="badge" id="badge-status">Parado</span></h3>
+      <p class="card-subtitle">
+        Inicie o trajeto e marque ninhos com observação e foto.
+      </p>
+
+      <div class="controls-grid">
+        <button class="btn-lg btn-start" id="btn-toggle-route">
+          <span id="btn-toggle-icon">▶</span>
+          <span id="btn-toggle-text">Iniciar trajeto</span>
+        </button>
+
+        <button class="btn-lg btn-secondary" id="btn-add-nest" disabled>
+          🐝 Marcar ninho
+        </button>
+      </div>
+
+      <div class="info-row">
+        <span class="info-pill" id="info-route-name">Trajeto: —</span>
+        <span class="info-pill" id="info-distance">Distância: 0 m</span>
+        <span class="info-pill" id="info-nests">Ninhos: 0</span>
+        <span class="info-pill" id="info-gps">GPS: aguardando...</span>
+      </div>
+    </section>
+
+    <section class="card">
+      <div class="map-head">
+        <div>
+          <h3>Mapa</h3>
+          <p class="card-subtitle">O mapa acompanha seu caminho e mostra os ninhos.</p>
+        </div>
+      </div>
+      <div id="map"></div>
+    </section>
+  </div>
+
+  <section class="routes-section">
+    <div class="routes-header">
+      <h3>Trajetos salvos</h3>
+      <button class="btn-xs" id="btn-refresh">Atualizar</button>
+    </div>
+    <div id="routes-list"></div>
+  </section>
+</div>
+
+<div id="photo-modal">
+  <button id="photo-modal-close">Fechar</button>
+  <img id="photo-modal-img" src="" alt="Foto do ninho" />
+</div>
+
+<div id="nest-modal" class="modal-backdrop">
+  <div class="modal-card">
+    <h4>Marcar ninho</h4>
+    <p>Adicione observação e (opcional) uma foto.</p>
+
+    <div class="modal-field">
+      <label for="nest-notes">Observações (opcional)</label>
+      <textarea id="nest-notes" placeholder="Ex.: árvore grande perto da rua 14..."></textarea>
+    </div>
+
+    <div class="modal-field">
+      <label>Foto do ninho (opcional)</label>
+      <label class="modal-file-label">
+        📷 <span>Selecionar ou tirar foto</span>
+        <input id="nest-file-input" type="file" accept="image/*" capture="environment" />
+      </label>
+      <span id="nest-file-name" class="modal-file-name"></span>
+    </div>
+
+    <div class="modal-actions">
+      <button class="btn-sm" id="nest-cancel">Cancelar</button>
+      <button class="btn-sm btn-sm-primary" id="nest-save">Salvar ninho</button>
+    </div>
+  </div>
+</div>
+
+<script type="module" src="./js/app.js"></script>
 </body>
 </html>
